Add admin APIs to consent management API